# tg-music-bot

./: .gitignore  README.md  pyproject.toml
get_song/: fetchSongURL.js
server/: chrome.py
songFetcher/scripts/: fetchSongURL.js
tests/: test_chrome.py
tg_music_bot/: api.py
