[tool.poetry]
name = "tg-music-bot"
version = "0.1.0"
description = ""
authors = ["tact1101 <christbleighton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.11.4"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.10"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pytest = "^8.3.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
